--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     </head>
     <body>
     <div class="background">
-        <div class="title"><h1 style="color: white;">Hotel SK<br>Menu Card</h1></div>
+        <div class="title"><h1 style="color: white;">Hotel MUSTANGB<br>Menu Card</h1></div>
         
          <div class="cont">
-            <h1>Select the menu item to see its details</h1>
+            <h1>Select the menu item for list given below</h1>
           </div>
           
           <div class="container">
