--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
        <style>
           
           .background{
-          background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../1.jpg);
+          background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(1.jpg);
           background-size:cover;
           height: 100vh;
     width: 100%;
